--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Citizen Information</title>
+    <link rel="shortcut icon" href="../static/citizen.ico" type="image/x-icon">
     <link rel="stylesheet" href="../static/styles.css">
     <script src="../static/script.js" defer></script>
 </head>
